# WaterProject

./: .gitignore  DEPLOY.md  QUESTIONS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
.streamlit/: config.toml
WaterProjectFiles/SierraLeone_BGS_Hydrogeology/: AfricaGroundwaterAtlasCountryMap-LicenceInformation_V1.2.txt  SierraLeone_HG.dbf  SierraLeone_HG.shp  SierraLeone_HG.shx
app/: streamlit_app.py
app/gw_app/: __init__.py  bundle.py  chrome.py  common.py  cost.py  design.py  extract.py  guide.py  handover.py  maps.py  pump.py  quality.py  registry.py  sidebar.py  status.py  supervision.py  templates.py  ves.py
docs/: index.html  user_guide.md
examples/: README.md  build_sample_data.py  run_dr_timbo_completion.py  run_kuntolo_step_test.py  run_rokel_geophysics.py
examples/data/dr_timbo/: dr_timbo_constant_test.xlsx  dr_timbo_drilling_log.xlsx  dr_timbo_water_quality.xlsx
examples/data/kuntolo/: kuntolo_step_test.xlsx
examples/data/rokel/: rokel_ipi2win_models.xlsx  rokel_ves.xlsx
examples/projects/dr_timbo/: project.yaml
examples/projects/kuntolo/: project.yaml
examples/projects/rokel/: project.yaml
src/groundwater/: __init__.py  config.py  coverage.py  geo.py  models.py  plotting.py  portfolio.py  project.py  project_io.py  recompute.py  registry.py  utils.py  waterpoints.py
src/groundwater/costing/: __init__.py  enterprise.py  export.py  model.py  plots.py  programme.py  sensitivity.py
src/groundwater/data/: borehole_cost_items.csv  site_separation_distances.csv  sl_admin_geoboundaries.geojson  sl_census_crosswalk.csv  sl_chiefdom_district.csv  sl_chiefdoms_geoboundaries.geojson  sl_districts.csv  sl_geology_simplified.geojson  sl_geology_usgs.geojson  (+5 more)
tests/: conftest.py  test_app.py  test_bugfixes.py  test_chiefdoms.py  test_corrosivity.py  test_costing.py  test_coverage.py  test_dar_zarrouk.py  test_geo_and_checks.py  test_hydraulics.py  test_indices.py  test_ingestion.py  test_portfolio.py  test_programme_and_maps.py  test_project_io.py  test_quality_design_mapping.py  test_recompute.py  test_redesign.py  test_registry.py  test_reporting_and_extraction.py  test_siting.py  test_supervision.py  test_utils.py  test_ves.py  test_waterpoints.py  test_web_build.py
web/: build_demo.py  build_geodata.py  make_brand_assets.py
(+62 files in other folders)
