[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundwater-toolkit"
version = "0.1.0"
description = "Groundwater investigation analysis and reporting toolkit for rural water supply borehole projects in Sierra Leone"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GeomentAqua" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gis = ["geopandas>=0.14", "pyproj>=3.6"]
app = ["streamlit>=1.30"]
extract = ["pdfplumber>=0.10"]
ai = ["anthropic>=0.40"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
groundwater = ["data/*.csv", "data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
