[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundwater-toolkit"
version = "0.2.0"
description = "Groundwater investigation analysis and reporting toolkit for rural water supply borehole projects in Sierra Leone"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GeomentAqua" }]
dependencies = [
    # numpy is capped <3 to match the deployment pin in requirements.txt
    # (the browser build ships numpy 2.x; a future 3.0 is untested here).
    "numpy>=1.24,<3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gis = ["geopandas>=0.14", "pyproj>=3.6"]
# The committed .streamlit/config.toml uses theme keys (baseRadius,
# borderColor, [theme.sidebar]) introduced in Streamlit ~1.57, so pin the
# floor accordingly and mirror the deployment cap in requirements.txt.
app = ["streamlit>=1.57,<2"]
extract = ["pdfplumber>=0.10"]
ai = ["anthropic>=0.40"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
groundwater = ["data/*.csv", "data/*.yaml", "data/*.geojson", "data/brand/*.png", "data/brand/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
